--- a/Frontend/src/app/auth/login/login.component.html
+++ b/Frontend/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-spinner *ngIf="loading"></mat-spinner>
 <form class="form" [formGroup]="loginForm" *ngIf="!loading">
-  <div>
+  <div class="form-group form-padding">
     <label for="email">Adresse mail</label>
     <input type="email" class="form-control" id="email" formControlName="email">
   </div>
