--- a/Frontend/src/app/auth/login/login.component.scss
+++ b/Frontend/src/app/auth/login/login.component.scss
@@ -1,30 +1,46 @@
 .form{
-  margin-top: 92px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 90px;
+
   &-group{
-    margin-top: 55px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+
+  }
+  &-padding{
+    margin-top: 0;
   }
 }
 
 label{
   color:#4E5166;
   font: 16px bold;
-  margin-left: 20px;
+  margin-left: 125px;
+  font-family: inherit;
 }
 input{
   width: 436px;
   height: 40px;
+  margin-left: 105px;
+  margin-right: 105px;
   border: 1px solid #4E5166;
   border-radius: 20px;
+  font-family: inherit;
 }
 .button{
   display: flex;
   justify-content: center;
   margin-top: 83px;
+  
   &-valider{
     width: 185px;
     height: 67px;
     color: #FFFFFF;
-    font: 24px bold;
+    font-family: inherit;
+    font-size: 20px;
+    font-weight: bold;
     background-color: #FD2D01;
     border: 3px solid #FD2D01;
     border-radius: 37px;
@@ -38,5 +54,6 @@ input{
     font:  16px bold;
     text-decoration: underline;
     color: #4E5166;
+    font-family: inherit;
   }
 }
