--- a/Frontend/src/app/auth/signup/signup.component.html
+++ b/Frontend/src/app/auth/signup/signup.component.html
@@ -1,6 +1,6 @@
 <mat-spinner *ngIf="loading"></mat-spinner>
 <form class="form" [formGroup]="signupForm" *ngIf="!loading">
-  <div>
+  <div class="form-group form-padding">
     <label for="name">Nom</label>
     <input type="name" class="form-control" id="name" formControlName="name">
   </div>
