--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -1,8 +1,8 @@
 .container {
   border-radius: 87px;
   width: fit-content;
-  height: 763px;
-  margin-top: 98px;
+  height: fit-content;
+  margin-top: 224px;
   margin-bottom:95px;
   margin-left: auto;
   margin-right: auto;
