--- a/Frontend/src/app/header/header.component.scss
+++ b/Frontend/src/app/header/header.component.scss
@@ -1,54 +1,54 @@
 nav {
-  background-color: #ffd7D7;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top:0px;
+  background-color: #ffffff;
   box-shadow: 5px 10px 25px #00000029;
   height: 124px;
   width: 100%;
 }
-
-.logo {
+ul {
+  list-style: none;
+}
+.logo{
   display: flex;
-  justify-content: center;
   align-items: center;
-  &-image {
-    img {
-      height: 5em;
-    }
-    margin-right: 1em;
+  justify-content: center;
+  height: fit-content;
+  width: fit-content;
+  margin-top: 25px;
+  &-image{
+    width: 386px;
+    height: 84px;
   }
 }
 
-
-
-.left-nav {
-  align-self: center;
-  width: 30%;
+.Button{
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 37px;
+border: 3px solid #Fd2D01;
+height: 52px;
+width: 170px;
+text-decoration: none;
+color:#Fd2D01;
+font-size: 20px;
+&-deco{
+  margin-right: 40px;
 }
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
 }
-
-li {
-  margin: 0 15px;
-}
-
-a {
-  color: #FD2D01;
-  font-weight: 400;
-  text-decoration: none;
-  border-radius: 20em;
-  padding: 10px;
-  border-color: #FD2D01;
-  border-width: 2px;
-  border-style: solid;
-  cursor: pointer;
-  &:hover {
-background-color: #ffd7D7;  }
-}
-
 .active {
-  font-weight: 700;
+  color:#FFFFFF;
+  background-color: #FD2D01;
+}
+.right-nav{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
