--- a/Frontend/src/app/poste-list/poste-list.component.scss
+++ b/Frontend/src/app/poste-list/poste-list.component.scss
@@ -1,54 +1,50 @@
 .poste-list {
+  position: absolute;
+  top:0;
+  left:0;
+  padding-top: 150px;
   display: flex;
   flex-direction: row-reverse;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
   flex-wrap: wrap;
-  max-height: fit-content;
-}
-.poste-list-head{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-.poste-list-body{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  max-width: 150px;
-  height: 150px;
-}
-.poste-list-item {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-  margin-top: 5%;
-  margin-bottom: 5%;
-  padding: 2%;
-  width: 90%;
-  background-color:#FFD7D7;
-  img {
-    max-width: 150px;
-    max-height: 150px;
+  background-color: #f9f9f9;
+  color: #FD2D01;
+  font-size: 30px;
+  &-item{
+    margin-bottom: 43px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    width: 989px;
+    height: 270px;
+    box-shadow: 5px 10px 25px #00000029;
+    border-radius: 63px;
+    background: white;
+    transition: all 0.1s ease-in-out;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 1px 1px 20px rgba(120, 120, 120, 0.3);
+    }
   }
-  h4 {
-    margin: 0;
-    font-weight: 500;
-  }
-  p {
-    margin: 0;
-  }
-  transition: all 0.1s ease-in-out;
-  cursor: pointer;
-  &:hover {
-    transform: scale(1.05);
-    box-shadow: 1px 1px 20px rgba(120, 120, 120, 0.3);
+  &-head{
+    margin-top:96px;
   }
 }
 
-.list-title {
-  text-align: center;
-  margin: 2em auto;
+.name{
+  color: #4E5166; 
+  font-size: 20px;
+  margin-top:-5px;
+}
+.preview{
+  border-radius: 34px;
+  margin-top: 31px;
+  margin-left: -50px;
+  &-img{
+    width: 299px;
+    height: 208px;
+    border-radius: 34px;
+  }
 }
