--- a/Frontend/src/app/single-poste/single-poste.component.scss
+++ b/Frontend/src/app/single-poste/single-poste.component.scss
@@ -1,7 +1,15 @@
 .poste-container {
   display: flex;
+  width: 1335px;
+  height: 849px;
+  width: 1335px;
+  height: 849px;
   img {
-    max-height: 70vh;
+    width: 628px;
+    height: 776px;
+    border-radius: 34px;
+    margin-top: 35px;
+    margin-left: 40px;
     flex: 1;
   }
 }
@@ -11,10 +19,13 @@
   flex: 1;
 }
 
-
-
-.poste-titre {
-  margin: 0;
+.poste-content{
+  width: 529px;
+  height: 494px;
+  color: #4E5166;
+  text-align: left;
+  margin-left: 69px;
+  margin-right: 69px;
 }
 
 .like-buttons {
