--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -1,17 +1,11 @@
 <nav class="nav">
   <div class="left-nav">
-    <ul>
-      <li>
-        <a routerLink="postes" routerLinkActive="active" *ngIf="isAuth$ | async">
-          <i class="fas fa-house"></i>
+        <a class="Button Button-acceuil" routerLink="postes" routerLinkActive="active" *ngIf="isAuth$ | async">
+          Acceuil
         </a>
-      </li>
-      <li>
         <a class="Button" routerLink="new-poste" routerLinkActive="active" *ngIf="isAuth$ | async">
-          CREER UN POST
+          Créer un post
         </a>
-      </li>
-    </ul>
   </div>
   <div class="logo">
     <div>
@@ -19,10 +13,6 @@
     </div>
   </div>
   <div class="right-nav">
-    <ul>
-      <li>
         <a class="Button Button-deco" (click)="onLogout()" *ngIf="isAuth$ | async">Déconnexion</a>
-      </li>
-    </ul>
   </div>
 </nav>
